[tool.poetry]
name = "datahub_custom_api_source"
version = "0.1.0"
description = ""
license = "MIT"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
acryl-datahub = "0.14.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.0"
vcrpy = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
